--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "cookie-parser": "^1.4.6",
-    "node-fetch": "^3.4.1"
+    "node-fetch": "2.6.7"
   },
   "engines": {
     "node": ">=16"
